# Web3-Pi-UPS-Service

./: .gitignore  Cargo.toml  Cross.toml  README.md  config.toml.example  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: shutdown.sh
src/: cli.rs  commands.rs  config.rs  daemon.rs  dispatcher.rs  ipc.rs  logging.rs  main.rs  monitor.rs  shutdown_sm.rs  soc.rs  state.rs  status.rs  ups_data.rs
src/host_metrics/: cpu.rs  disk.rs  eth.rs  mem.rs  mod.rs  network.rs  uptime.rs
src/proto/: deframer.rs  fletcher.rs  frame.rs  mod.rs  payloads.rs
src/transport/: detect.rs  mod.rs  serial.rs
systemd/: w3p-ups.service
